# softland

./: .gitignore  Cargo.toml  README.md
.cargo/: config
data/: foo.txt
overrides/imgui-rs/: Cargo.toml
overrides/imgui-rs/imgui-gfx-renderer/: Cargo.toml
overrides/imgui-rs/imgui-glium-renderer/: Cargo.toml
overrides/imgui-rs/imgui-sys/: Cargo.toml
overrides/imgui-rs/src/: lib.rs  window.rs
src/: camera.rs  chat_history.rs  chat_window.rs  color.rs  gpu.rs  main.rs  shader.rs  shape.rs  state.rs  support.rs  support_gfx.rs  test_window_impl.rs  ui.rs
src/shader/: cube_color.glslf  cube_uv.glslf  cube_uv.glslv  triangle.glslf  triangle.glslv  triangle_150.glslf  triangle_150.glslv
src/support/: mod.rs
src/support_gfx/: mod.rs
