[package]
name = "softland"
version = "0.1.0"
authors = ["Benjamin Adamson <adamson.benjamin@gmail.com>"]

[dependencies]
cgmath = "0.14.1"
itertools = "0.6.0"

game_time = "0.2.0"
genmesh = { git = "https://github.com/gfx-rs/genmesh.git" }
gfx = "0.16"
gfx_window_glutin = "0.16"
glium = { version = "0.16", default-features = true }
glutin = "0.8"
image = "0.14.0"

imgui = { version = "0.0.15-pre", path = "./external/imgui-rs" }
imgui-sys = { version = "0.0.15-pre", path = "./external/imgui-rs/imgui-sys" }
imgui-gfx-renderer = { version = "0.0.15-pre", path = "./external/imgui-rs/imgui-gfx-renderer" }

min_max_macros = "0.1.1"
noise = "0.4.1"
rand = "0.3"

serde = "1.0"
serde_derive = "1.0"
specs = "0.9.2"

toml = "0.4"
